<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.livroandroid.olafragment.MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frag1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minha_lista_de_compras"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:textSize="30sp"
                android:layout_marginBottom="20dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cadastrar"
                    android:layout_weight="1"
                    android:onClick="FragmentCadastro"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text= "@string/produtos_cadastrados"
                    android:onClick="ListaCadastro"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
    <FrameLayout
        android:id="@+id/frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>


</LinearLayout>
